Project

General

Profile

Actions

Bug #47855

closed

cls_fifo_legacy: fix logical errors with return values

Added by Yuval Lifshitz over 3 years ago. Updated over 3 years ago.

Status:
Closed
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Development
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

from pvs-studio static analysis:

/home/ylifshit/projects/ceph/src/rgw/cls_fifo_legacy.cc:470:1: warning: V614 Potentially uninitialized variable 'r' used.
/home/ylifshit/projects/ceph/src/rgw/cls_fifo_legacy.cc:594:1: error: V547 Expression 'r < 0' is always false.
/home/ylifshit/projects/ceph/src/rgw/cls_fifo_legacy.cc:657:1: error: V1030 The 'oid' variable is used after it was moved.
/home/ylifshit/projects/ceph/src/rgw/cls_fifo_legacy.cc:840:1: warning: V560 A part of conditional expression is always true: r == 0.
/home/ylifshit/projects/ceph/src/rgw/cls_fifo_legacy.cc:877:1: error: V547 Expression 'r == - 2' is always false.
/home/ylifshit/projects/ceph/src/rgw/cls_fifo_legacy.cc:895:1: error: V547 Expression 'r < 0' is always false.
/home/ylifshit/projects/ceph/src/rgw/cls_fifo_legacy.cc:923:1: error: V547 Expression 'r >= 0' is always true.

Actions #1

Updated by Abhishek Lekshmanan over 3 years ago

  • Backport deleted (octopus)
Actions #2

Updated by Yuval Lifshitz over 3 years ago

  • Status changed from Fix Under Review to Closed
Actions

Also available in: Atom PDF