rgw/cls_fifo_legacy: fix logical error with return values

issues were detected by pvs-studio static analyzer

fixes: https://tracker.ceph.com/issues/47855

Signed-off-by: Yuval Lifshitz <ylifshit@redhat.com>